--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-vue": "^9.25.0",
     "globals": "^15.0.0",
     "typescript": "^5.4.5",
+    "typescript-eslint": "^7.7.1",
     "vitest": "^1.5.0"
   }
 }
