--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@gildsmith/profile-client",
+  "type": "module",
   "version": "1.0.0",
   "main": "src/widgets.js",
   "repository": {
@@ -22,20 +23,6 @@
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.0.2",
-    "@eslint/js": "^9.1.1",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@vue/test-utils": "^2.4.5",
-    "eslint": "^8.57.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-config-standard-with-typescript": "^43.0.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-vue": "^9.25.0",
-    "globals": "^15.0.0",
-    "typescript": "^5.4.5",
-    "typescript-eslint": "^7.7.1",
-    "vitest": "^1.5.0"
+    "typescript": "^5.4.5"
   }
 }
