--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
-    "typescript": "^5.4.5"
+    "@eslint/js": "^9.1.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^9.25.0",
+    "globals": "^15.0.0",
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.7.1"
   }
 }
